Update java VM command line options